[gd_scene load_steps=16 format=3 uid="uid://da6dltfws6ra6"]

[ext_resource type="Script" path="res://src/actors/car/player_car.gd" id="1_wo8g8"]
[ext_resource type="Script" path="res://src/nodes/health/health.gd" id="2_vn0ab"]
[ext_resource type="Script" path="res://src/nodes/hurtbox/hurtbox.gd" id="3_1ygx1"]
[ext_resource type="Script" path="res://src/nodes/hitbox/hitbox.gd" id="4_io016"]
[ext_resource type="Script" path="res://src/actors/car/drift/drifter.gd" id="4_o6fn7"]
[ext_resource type="Texture2D" uid="uid://5s16qsmsypi6" path="res://src/actors/car/car.png" id="5_xmik8"]
[ext_resource type="Script" path="res://src/actors/car/sound/car_sound.gd" id="8_h4t1s"]
[ext_resource type="PackedScene" uid="uid://yt7lsn48fu80" path="res://src/actors/car/smoke/smoke_emitter.tscn" id="8_rcsa8"]
[ext_resource type="AudioStream" uid="uid://dpccq21qfhth0" path="res://src/actors/car/sound/engine.ogg" id="9_op68w"]
[ext_resource type="AudioStream" uid="uid://ds6xexwy31fo2" path="res://src/actors/car/sound/drift.wav" id="10_li6f2"]
[ext_resource type="AudioStream" uid="uid://koas2bu62cp4" path="res://src/actors/car/sound/explosion.wav" id="11_c26ux"]

[sub_resource type="QuadMesh" id="QuadMesh_y5nal"]

[sub_resource type="Gradient" id="Gradient_xxfim"]
offsets = PackedFloat32Array(0, 0.996894)
colors = PackedColorArray(0.137255, 0.145098, 0.14902, 1, 0.137255, 0.145098, 0.14902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4m37v"]
gradient = SubResource("Gradient_xxfim")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bsupm"]
radius = 21.0
height = 86.0

[node name="PlayerCar" type="RigidBody2D" node_paths=PackedStringArray("health") groups=["player"]]
collision_layer = 9
mass = 10.0
inertia = 200.0
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("1_wo8g8")
health = NodePath("Health")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("hurt_box")]
script = ExtResource("2_vn0ab")
max_health = 200
hurt_box = NodePath("../HurtBox")

[node name="RightWheel" type="MeshInstance2D" parent="."]
position = Vector2(23, 16.25)
scale = Vector2(21, 8.5)
mesh = SubResource("QuadMesh_y5nal")
texture = SubResource("GradientTexture2D_4m37v")

[node name="LeftWheel" type="MeshInstance2D" parent="."]
position = Vector2(23, -16.25)
scale = Vector2(21, 8.5)
mesh = SubResource("QuadMesh_y5nal")
texture = SubResource("GradientTexture2D_4m37v")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("5_xmik8")

[node name="DriveWheel" type="Marker2D" parent="."]
position = Vector2(-24, 0)

[node name="SteeringWheel" type="Marker2D" parent="."]
position = Vector2(23, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bsupm")

[node name="Drifter" type="Marker2D" parent="."]
position = Vector2(-24, -18)
script = ExtResource("4_o6fn7")

[node name="Drifter2" type="Marker2D" parent="."]
position = Vector2(23, -18)
script = ExtResource("4_o6fn7")

[node name="Drifter3" type="Marker2D" parent="."]
position = Vector2(23, 19)
script = ExtResource("4_o6fn7")

[node name="Drifter4" type="Marker2D" parent="."]
position = Vector2(-24, 17)
script = ExtResource("4_o6fn7")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("3_1ygx1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bsupm")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("4_io016")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bsupm")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="SmokeEmitter" parent="." node_paths=PackedStringArray("health") instance=ExtResource("8_rcsa8")]
z_index = 1
position = Vector2(32, 0)
health = NodePath("../Health")

[node name="CarSound" type="Node2D" parent="." node_paths=PackedStringArray("wheel")]
script = ExtResource("8_h4t1s")
wheel = NodePath("../RightWheel")

[node name="EngineAudio" type="AudioStreamPlayer2D" parent="CarSound"]
stream = ExtResource("9_op68w")
autoplay = true

[node name="DriftAudio" type="AudioStreamPlayer2D" parent="CarSound"]
stream = ExtResource("10_li6f2")
autoplay = true

[node name="ExplosionAudio" type="AudioStreamPlayer2D" parent="CarSound"]
stream = ExtResource("11_c26ux")
volume_db = 12.0

[connection signal="died" from="." to="CarSound" method="_on_player_car_died"]
[connection signal="damaged" from="Health" to="." method="_on_health_damaged"]
[connection signal="died" from="Health" to="." method="_on_health_died"]
